Issue #11272: Fix input() and sys.stdin for Windows newline

On Windows, input() strips '\r' (and not only '\n'), and sys.stdin uses
universal newline (replace '\r\n' by '\n').